--- a/CPP_Module/CPP_Module_00/ex01/Makefile
+++ b/CPP_Module/CPP_Module_00/ex01/Makefile
@@ -6,7 +6,7 @@
 #    By: hyojang <hyojang@student.42seoul.kr>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/11/11 13:39:27 by hyojang           #+#    #+#              #
-#    Updated: 2021/11/11 22:44:49 by hyojang          ###   ########.fr        #
+#    Updated: 2021/11/12 01:48:18 by hyojang          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -17,7 +17,8 @@ CFLAGS = -Wall -Wextra -Werror -std=c++98
 
 RM = rm -f
 
-FILES = phonebook	\
+FILES = main		\
+		PhoneBook	\
 		Contact
 
 SRCS_DIR = ./
