CPP_01/ex03 done

--- a/CPP_Module/CPP_Module_01/ex03/Makefile
+++ b/CPP_Module/CPP_Module_01/ex03/Makefile
@@ -6,11 +6,11 @@
 #    By: hyojang <hyojang@student.42seoul.kr>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/11/11 13:39:27 by hyojang           #+#    #+#              #
-#    Updated: 2021/12/31 00:35:48 by hyojang          ###   ########.fr        #
+#    Updated: 2022/01/01 11:08:29 by hyojang          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = BRAIN
+NAME = TEST
 
 CXX = clang++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
@@ -18,7 +18,9 @@ CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 RM = rm -f
 
 FILES = main	\
-		HumanA
+		Weapon	\
+		HumanA	\
+		HumanB
 
 SRCS_DIR = ./
 SRCS = $(addprefix $(SRCS_DIR), $(addsuffix .cpp, $(FILES)))
