CPP_02 compiler clang++ -> c++

--- a/CPP_Module/CPP_Module_02/ex00/Makefile
+++ b/CPP_Module/CPP_Module_02/ex00/Makefile
@@ -6,13 +6,13 @@
 #    By: hyojang <hyojang@student.42seoul.kr>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/11/11 13:39:27 by hyojang           #+#    #+#              #
-#    Updated: 2022/01/19 18:57:52 by hyojang          ###   ########.fr        #
+#    Updated: 2022/01/30 11:33:39 by hyojang          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = a.out
 
-CXX = clang++
+CXX = c++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
 RM = rm -f
