--- a/CPP_Module/CPP_Module_03/ex03/Makefile
+++ b/CPP_Module/CPP_Module_03/ex03/Makefile
@@ -6,15 +6,14 @@
 #    By: hyojang <hyojang@student.42seoul.kr>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/11/11 13:39:27 by hyojang           #+#    #+#              #
-#    Updated: 2022/02/05 23:55:22 by hyojang          ###   ########.fr        #
+#    Updated: 2022/02/06 00:16:58 by hyojang          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = DIAMONDTRAP
 
 CXX = c++
-#CXXFLAGS = -Wall -Wextra -Werror -std=c++98 -Wshadow -Wno-shadow
-CXXFLAGS = -Wall -Wextra -Werror -std=c++98 -Wshadow
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98 -Wshadow -Wno-shadow
 
 RM = rm -f
 
