CPP_04/ex00 done

--- a/CPP_Module/CPP_Module_04/ex00/Makefile
+++ b/CPP_Module/CPP_Module_04/ex00/Makefile
@@ -6,7 +6,7 @@
 #    By: hyojang <hyojang@student.42seoul.kr>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/11/11 13:39:27 by hyojang           #+#    #+#              #
-#    Updated: 2022/02/07 00:48:55 by hyojang          ###   ########.fr        #
+#    Updated: 2022/02/07 05:41:30 by hyojang          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -17,10 +17,12 @@ CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
 RM = rm -f
 
-FILES = main	\
-		Animal	\
-		Dog		\
-		Cat
+FILES = main		\
+		Animal		\
+		Dog			\
+		Cat			\
+		WrongAnimal	\
+		WrongCat
 
 SRCS_DIR = ./
 SRCS = $(addprefix $(SRCS_DIR), $(addsuffix .cpp, $(FILES)))
