--- a/CPP_Module/CPP_Module_04/ex03/Makefile
+++ b/CPP_Module/CPP_Module_04/ex03/Makefile
@@ -6,14 +6,14 @@
 #    By: hyojang <hyojang@student.42seoul.kr>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/11/11 13:39:27 by hyojang           #+#    #+#              #
-#    Updated: 2022/02/09 09:07:12 by hyojang          ###   ########.fr        #
+#    Updated: 2022/02/09 09:38:41 by hyojang          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = a.out
 
 CXX = c++
-CXXFLAGS = -Wall -Wextra -Werror -std=c++98
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98 -fsanitize=address
 
 RM = rm -f
 
