CPP_05/ex00 ~ ing

--- a/CPP_Module/CPP_Module_05/ex00/Makefile
+++ b/CPP_Module/CPP_Module_05/ex00/Makefile
@@ -6,7 +6,7 @@
 #    By: hyojang <hyojang@student.42seoul.kr>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/11/11 13:39:27 by hyojang           #+#    #+#              #
-#    Updated: 2022/02/09 14:43:45 by hyojang          ###   ########.fr        #
+#    Updated: 2022/02/10 13:43:52 by hyojang          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -17,7 +17,8 @@ CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
 RM = rm -f
 
-FILES = main			\
+FILES = main		\
+		Bureaucrat
 
 SRCS_DIR = ./
 SRCS = $(addprefix $(SRCS_DIR), $(addsuffix .cpp, $(FILES)))
