CPP_05/ex01 edit Makefile Form

--- a/CPP_Module/CPP_Module_05/ex01/Makefile
+++ b/CPP_Module/CPP_Module_05/ex01/Makefile
@@ -6,11 +6,11 @@
 #    By: hyojang <hyojang@student.42seoul.kr>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/11/11 13:39:27 by hyojang           #+#    #+#              #
-#    Updated: 2022/02/12 20:11:38 by hyojang          ###   ########.fr        #
+#    Updated: 2022/02/13 03:50:18 by hyojang          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = Bureaucrat
+NAME = Form
 
 CXX = c++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
