CPP_05/ex02 ~ ing2

--- a/CPP_Module/CPP_Module_05/ex02/Makefile
+++ b/CPP_Module/CPP_Module_05/ex02/Makefile
@@ -6,7 +6,7 @@
 #    By: hyojang <hyojang@student.42seoul.kr>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/11/11 13:39:27 by hyojang           #+#    #+#              #
-#    Updated: 2022/02/13 03:50:18 by hyojang          ###   ########.fr        #
+#    Updated: 2022/02/13 07:50:26 by hyojang          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -17,9 +17,10 @@ CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
 RM = rm -f
 
-FILES = main		\
-		Bureaucrat	\
-		Form
+FILES = main					\
+		Bureaucrat				\
+		Form					\
+		PresidentialPardonForm
 
 SRCS_DIR = ./
 SRCS = $(addprefix $(SRCS_DIR), $(addsuffix .cpp, $(FILES)))
