CPP_05/ex02 rename robot -> roboto

--- a/CPP_Module/CPP_Module_05/ex02/Makefile
+++ b/CPP_Module/CPP_Module_05/ex02/Makefile
@@ -6,7 +6,7 @@
 #    By: hyojang <hyojang@student.42seoul.kr>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/11/11 13:39:27 by hyojang           #+#    #+#              #
-#    Updated: 2022/02/13 13:51:28 by hyojang          ###   ########.fr        #
+#    Updated: 2022/02/13 15:55:38 by hyojang          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -21,7 +21,7 @@ FILES = main					\
 		Bureaucrat				\
 		Form					\
 		ShrubberyCreationform	\
-		RobotmyRequestForm		\
+		RobotomyRequestForm		\
 		PresidentialPardonForm
 
 SRCS_DIR = ./
