--- a/CPP_Module/CPP_Module_07/ex01/Makefile
+++ b/CPP_Module/CPP_Module_07/ex01/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: marvin <marvin@student.42seoul.kr>         +#+  +:+       +#+         #
+#    By: hyojang <marvin@student.42seoul.kr>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/11/11 13:39:27 by hyojang           #+#    #+#              #
-#    Updated: 2022/02/15 13:58:11 by marvin           ###   ########.fr        #
+#    Updated: 2022/02/15 21:25:14 by marvin           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
