edit header marvin -> hyojang T.T

--- a/CPP_Module/CPP_Module_06/ex01/Makefile
+++ b/CPP_Module/CPP_Module_06/ex01/Makefile
@@ -6,7 +6,7 @@
 #    By: hyojang <hyojang@student.42seoul.kr>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/11/11 13:39:27 by hyojang           #+#    #+#              #
-#    Updated: 2022/02/15 09:38:14 by marvin           ###   ########.fr        #
+#    Updated: 2022/02/16 14:09:53 by hyojang          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
