--- a/CPP_Module/CPP_Module_06/ex02/Makefile
+++ b/CPP_Module/CPP_Module_06/ex02/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: marvin <marvin@student.42seoul.kr>         +#+  +:+       +#+         #
+#    By: hyojang <hyojang@student.42seoul.kr        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/11/11 13:39:27 by hyojang           #+#    #+#              #
-#    Updated: 2022/02/15 12:26:38 by marvin           ###   ########seoul.kr   #
+#    Updated: 2022/02/16 14:16:50 by hyojang          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
