--- a/CPP_Module/CPP_Module_08/ex01/Makefile
+++ b/CPP_Module/CPP_Module_08/ex01/Makefile
@@ -6,11 +6,11 @@
 #    By: hyojang <hyojang@student.42seoul.kr>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/11/11 13:39:27 by hyojang           #+#    #+#              #
-#    Updated: 2022/02/18 00:28:29 by hyojang          ###   ########.fr        #
+#    Updated: 2022/02/18 02:22:24 by hyojang          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = SPAN
+NAME = ex01
 
 CXX = c++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
