CPP_08/ex02 ~ing

--- a/CPP_Module/CPP_Module_08/ex02/Makefile
+++ b/CPP_Module/CPP_Module_08/ex02/Makefile
@@ -6,7 +6,7 @@
 #    By: hyojang <hyojang@student.42seoul.kr>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/11/11 13:39:27 by hyojang           #+#    #+#              #
-#    Updated: 2022/02/18 09:21:33 by hyojang          ###   ########.fr        #
+#    Updated: 2022/02/18 12:41:44 by hyojang          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -18,7 +18,7 @@ CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 RM = rm -f
 
 FILES = main		\
-		#mutantstack
+		mutantstack
 
 SRCS_DIR = ./
 SRCS = $(addprefix $(SRCS_DIR), $(addsuffix .cpp, $(FILES)))
