--- a/inception/srcs/requirements/mariadb/Dockerfile
+++ b/inception/srcs/requirements/mariadb/Dockerfile
@@ -1,8 +1,12 @@
 FROM debian:buster
 
-RUN apt update && \
-    apt install -y mariadb-server
+RUN apt-get update
+RUN apt-get install -y mariadb-server
 
 COPY ./conf/mariadb_settings.sql /
+RUN /etc/init.d/mysql start && mysql < /mariadb_settings.sql
+#RUN rm /etc/mysql/mariadb.conf.d/50-server.cnf
+COPY ./conf/50-server.cnf /etc/mysql/mariadb.conf.d/
+
 #ENTRYPOINT 
 
