--- a/inception/srcs/requirements/wordpress/Dockerfile
+++ b/inception/srcs/requirements/wordpress/Dockerfile
@@ -3,9 +3,10 @@ FROM debian:buster
 RUN apt-get update
 RUN apt-get install -y php php-fpm php-mysql php-curl php-gd php-intl php-mbstring php-soap php-xml php-xmlrpc php-zip
 
-RUN apt-get wget
+RUN apt-get install wget
 RUN wget https://wordpress.org/latest.tar.gz -P /tmp
-RUN tar -zxvf /tmp/latest.tar.gz
+RUN tar -zxvf /tmp/latest.tar.gz -C /tmp/
+RUN mkdir -p /var/www/html
 RUN mv /tmp/wordpress /var/www/html
 
 RUN chown -R www-data:www-data /var/www/html/wordpress/
