--- a/inception/srcs/requirements/nginx/Dockerfile
+++ b/inception/srcs/requirements/nginx/Dockerfile
@@ -3,4 +3,9 @@ FROM debian:buster
 RUN apt-get update
 RUN apt-get install -y nginx
 
+RUN cp ./conf/wordpress.conf /etc/nginx/sites-available/
+RUN rm /etc/nginx/sites-available/default
+RUN rm /etc/nginx/sites-enabled/default
+RUN ln -s /etc/nginx/sites-available/wordpress.conf /etc/nginx/sites-enabled/
+
 ENTRYPOINT ["nginx", "-g", "daemon off;"]
