--- a/inception/srcs/docker-compose.yml
+++ b/inception/srcs/docker-compose.yml
@@ -18,6 +18,8 @@ services:
         restart: always
         expose:
             - "3306"
+        volumes:
+            - ${home}/data:/var/lib/mysql
         networks:
             - inception_net
         depends_on:
@@ -37,8 +39,6 @@ services:
             - mariadb
 
         tty: true
-        volumes:
-        - ./data:/data
 
 networks:
     inception_net:
