--- a/inception/srcs/requirements/nginx/Dockerfile
+++ b/inception/srcs/requirements/nginx/Dockerfile
@@ -8,4 +8,8 @@ RUN rm /etc/nginx/sites-available/default
 RUN rm /etc/nginx/sites-enabled/default
 RUN ln -s /etc/nginx/sites-available/wordpress.conf /etc/nginx/sites-enabled/
 
+RUN	mkdir -p /etc/nginx/ssl
+COPY ./conf/test.crt /etc/nginx/ssl/
+COPY ./conf/test.key /etc/nginx/ssl/
+
 ENTRYPOINT ["nginx", "-g", "daemon off;"]
