--- a/inception/srcs/requirements/nginx/conf/wordpress.conf
+++ b/inception/srcs/requirements/nginx/conf/wordpress.conf
@@ -1,6 +1,6 @@
 server  {
-	listen 80;
-	listen [::]:80;
+	listen 443;
+	#listen [::]:80;
 	root /var/www/html/wordpress;
 	index index.php index.html index.htm;
 	server_name _;
@@ -10,8 +10,18 @@ server  {
 
 	client_max_body_size 100M;
 	location / {
+		proxy_http_version 1.1;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header Host $http_host;
+		proxy_set_header X-Forwarded-Protocol $scheme;
+		proxy_set_header X-Real_IP $remote_addr;
 		try_files $uri $uri/ /index.php?$args;
 	}
+
+	ssl on;
+	ssl_certificate /etc/nginx/ssl/test.crt;
+	ssl_certificate_key /etc/nginx/ssl/test.key;
+
 	location ~ \.php$ {
 		include snippets/fastcgi-php.conf;
 		fastcgi_pass 192.168.1.4:9000;
