--- a/inception/srcs/.env
+++ b/inception/srcs/.env
@@ -2,5 +2,5 @@ MD_DBNAME=wordpress_db
 MD_ID=wordpress_user
 MD_PW=password
 MD_HOST=192.168.1.3
-MD_ADMIN_ID=hyojang
-MD_ADMIN_PW=hyojang
+WP_ADMIN_ID=hyojang
+WP_ADMIN_PW=hyojang
