--- a/inception/srcs/docker-compose.yml
+++ b/inception/srcs/docker-compose.yml
@@ -27,9 +27,9 @@ services:
         depends_on:
             - nginx
         environment:
-            MD_DBNAME:    $(MD_DBNAME)
-            MD_ID:        $(MD_ID)
-            MD_PW:        $(MD_PW)
+            MD_DBNAME:    ${MD_DBNAME}
+            MD_ID:        ${MD_ID}
+            MD_PW:        ${MD_PW}
 
     wordpress:
         build: ./requirements/wordpress/
@@ -46,12 +46,12 @@ services:
             - nginx
             - mariadb
         environment:
-            MD_DBNAME:    $(MD_DBNAME)
-            MD_ID:        $(MD_ID)
-            MD_PW:        $(MD_PW)
-            MD_HOST:      $(MD_HOST)
-            MD_ADMIN_ID:  $(MD_ADMIN_ID)
-            MD_ADMIN_PW:  $(MD_ADMIN_PW)
+            MD_DBNAME:    ${MD_DBNAME}
+            MD_ID:        ${MD_ID}
+            MD_PW:        ${MD_PW}
+            MD_HOST:      ${MD_HOST}
+            WP_ADMIN_ID:  ${WP_ADMIN_ID}
+            WP_ADMIN_PW:  ${WP_ADMIN_PW}
 
 networks:
     inception_net:
