--- a/inception/srcs/requirements/wordpress/Dockerfile
+++ b/inception/srcs/requirements/wordpress/Dockerfile
@@ -3,6 +3,9 @@ FROM debian:buster
 RUN apt-get update
 RUN apt-get -y install php php-fpm php-mysql php-curl php-gd php-intl php-mbstring php-soap php-xml php-xmlrpc php-zip
 
+COPY ./conf/latest.tar.gz /
+RUN tar -xvf /latest.tar.gz -C /
+
 RUN apt-get -y install wget mariadb-client
 RUN wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
 RUN chmod +x wp-cli.phar
