--- a/inception/srcs/.env
+++ b/inception/srcs/.env
@@ -1,6 +1,6 @@
 MD_DBNAME=wordpress_db
 MD_ID=wordpress_user
 MD_PW=password
-MD_HOST=192.168.1.3
+MD_HOST=mariadb
 WP_ADMIN_ID=hyojang
 WP_ADMIN_PW=hyojang
