add header in Makefile

--- a/inception/Makefile
+++ b/inception/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: hyojang <hyojang@student.42seoul.kr>       +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2022/04/17 15:59:46 by hyojang           #+#    #+#              #
+#    Updated: 2022/04/18 16:00:31 by hyojang          ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 all: start
 
 settings:
